Change API specification
Changes related the Address Alias
